# AegisTactical

./: README (1).md  README.md  build.gradle  github workflow build-apk.yml  gradlew  sync (1).yml  sync.sh  sync.yml
.devcontainer/: devcontainer.json
.github/workflows/: jekyll-docker.yml  main. yml  main.yml  sync.yml
: app/src/main/java/com/jamesfirstok/aegis/: ConfigManager.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: code.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/aegis/tactical/v108/: ConfigManager.java  MainActivity.kt
app/src/main/java/com/jamesfirstok/aegis/: AndroidManifest.xml  CMakeLists.txt  MainActivity.kt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
github/workflows/: main. yml  main.yml
